@@ -11,14 +11,20 @@ namespace Astroid {
   class Cmd {
     public:
       Cmd ();
-      Cmd (ustring prefix, ustring cmd);
-      Cmd (ustring cmd);
+      Cmd (ustring prefix, ustring cmd, ustring undo_cmd);
+      Cmd (ustring cmd, ustring undo_cmd);
 
-      int run (); /* currently only in sync */
+      int run ();
+      int undo ();
+
+      bool undoable ();
 
     private:
       ustring prefix;
       ustring cmd;
+      ustring undo_cmd;
+
+      int execute (bool undo); /* currently only in sync */
 
       ustring substitute (ustring);
   };
