@@ -22,8 +22,14 @@ test.run(echo %1)=n
 test.run(echo %1)=y
 
 # reasign a key to a hook
-test.run(echo %1)=4
-test.run(echo %1)=5
+test.run(echo %1, echo undo %1)=4
+test.run(echo %1, echo undo %1)=5
+test.run(echo %1\, no undo)=6
+test.run(echo %1\, no undo, echo real undo %1)=7
+
+# these fail
+test.run(echo %1, echo undo, %1)=5
+test.run(,echo %1\, echo undo %1)=5
 
 
 # replacing an existing non-userdefined binding
